# ash

./: Cargo.toml  Justfile  LICENCE  README.md  build.Dockerfile  build.rs  comment_style.yaml  dock.yaml
docs/: decisions.md  features.md
src/: ast.rs  main.rs  parser.lalrpop
src/builtins/: fns.rs  mod.rs  type_functions.rs
src/eval/: bind.rs  builtins.rs  error.rs  mod.rs  scope.rs  value.rs
src/lexer/: mod.rs  scanner.rs
tests/: test.rs
tests/stdout/: builtin_type_functions.test  catch.test  features.test  functions.test  functions_combinations.test  indexing.test  lex_errors.xtest  lexical_scopes.xtest  lists.test  loops.test  mod.rs  multi_lines.test  objects.test  operations.test  operations_combinations.test  parse_errors.xtest  print.test  runtime_errors.xtest  stacktrace.xtest  this_functions.test  type_functions.test  variables.test
